fixed z-index issue on jumbotron

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -12,7 +12,7 @@ body {
   height: 500px;
   overflow: hidden;
   position: relative;
-  z-index: -2;
+  z-index: 1;
 }
 
 #video-background {
@@ -22,13 +22,14 @@ body {
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: -1;
+  z-index: 2;
   opacity: 0.5;
 }
 
 .home-content {
   position: relative;
   margin-top: 50px;
+  z-index: 3;
 }
 
 
